          set is not defined.
        - Fixed bug in Finder with ServerResource causing some NPE
          in some cases. Reported by Michael Berman.
        - Fixed some Maven artifact IDs (Atom, XML and FileUpload
          extensions). Reported by Jean-Yves Cronier and Remi Dewitte.
        - Fixed potential NPE in XmlRepresentation with namespaces.
    - Enhancements
        - Servlet's UserPrincipal is now transferred into Restlet's
          ClientInfo#subject property. Suggested by Paul Davis.
        - Updated Media type RDF N3 from "text/rdf+n3" to "text/n3". 
          Suggested by Simon Reinhardt.
        - Added support of the parsing and writing of RDF documents 
          expressed in N-Triples notation.
        - Added support of the parsing and writing of RDF documents 
          expressed in Turtle notation.
        - Added an initial port of Restlet to the new Google App Engine.
          Suggested by Didier Girard.
        - Added a ContextTemplateLoader to FreeMarker extension to load
          template based on the client dispatcher and a base URI.
        - Added new extension based on XStream library to automatically
          convert Java objects to/from XML and JSON.
        - Added converter helper to the "org.restlet.ext.json" extension.
          Useful for the ConverterService.
        - Added ObjectRepresentation classes to both the Restlet/GWT
          edition and to the server-side GWT extension. This class can
          (de-)serialize POJOs using the JSON-based encoding used by
          GWT-RPC.
        - Added content-length header (with 0 value), in case the 
          entity is not available when posting or putting since MS 
          Azure requires this header for any request. Reported by 
          Ronny Kwon.
        - Improved implementation of converter plugins (default/internal,
          Atom extension and GWT server-side extension).
        - Added MediaType#APPLICATION_JAVA_OBJECT_XML constant.