@@ -48,6 +48,10 @@ Changes log
         - Fixed some Maven artifact IDs (Atom, XML and FileUpload
           extensions). Reported by Jean-Yves Cronier and Remi Dewitte.
         - Fixed potential NPE in XmlRepresentation with namespaces.
+        - Fixed Atom extension for better AtomPub 1.0 compliance.
+          Reported by Thom Nelson.
+        - Fixed MediaType for proper parsing of parameters.
+          Reported by David Bordoley.
     - Enhancements
         - Servlet's UserPrincipal is now transferred into Restlet's
           ClientInfo#subject property. Suggested by Paul Davis.
